--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "http-server ./app"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/pauloqueiros/softhouse#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "angular": "^1.8.2",
     "angular-route": "^1.8.2",
     "bootstrap": "^4.5.3",
-    "grunt": "^1.3.0"
+    "grunt": "^1.3.0",
+    "http-server": "^0.12.3",
+    "jQuery": "^1.7.4"
   }
 }
