--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "http-server ./app"
+    "start": "http-server ./app -a localhost -p 8000 -c-1"
   },
   "repository": {
     "type": "git",
@@ -20,10 +20,12 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
     "angular": "^1.8.2",
+    "angular-resource": "^1.8.2",
     "angular-route": "^1.8.2",
     "bootstrap": "^4.5.3",
     "grunt": "^1.3.0",
     "http-server": "^0.12.3",
     "jQuery": "^1.7.4"
-  }
+  },
+  "devDependencies": {}
 }
